Data size report added and countryOfficialLanguages data added.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "locale-util",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "data/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "update-core": "node generators/core/phoneNumberMetadata.js && node generators/core/supplementalData.js && node generators/core/currencies.js && node generators/core/subdivisions.js && node generators/core/timezones.js && node generators/core/languageNamesByCode.js",
-    "update-extra": "node generators/extra/currencyCodes.js && node generators/extra/countryCodes.js && node generators/extra/languageCodes.js && node generators/extra/currencyCodesByCountry.js && node generators/extra/timezonesByCountry.js",
+    "update-extra": "node generators/extra/currencyCodes.js && node generators/extra/countryCodes.js && node generators/extra/languageCodes.js && node generators/extra/currencyCodesByCountry.js && node generators/extra/timezonesByCountry.js && node generators/extra/countryOfficialLanguages.js",
     "update-all": "npm run update-core && npm run update-extra && node generators/jstz-update-dst-rules",
     "release": "bash dev/push.sh"
   },
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/muratgozel/locale-util#readme",
   "dependencies": {
+    "minify-stream": "^1.2.1",
     "my-little-lodash": "^2.3.0",
     "node-expat": "^2.3.18",
     "node-fetch": "^2.6.0"
