--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locale-util",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "data/index.js",
   "scripts": {
@@ -8,7 +8,7 @@
     "update-core": "node generators/core/phoneNumberMetadata.js && node generators/core/supplementalData.js && node generators/core/currencies.js && node generators/core/subdivisions.js && node generators/core/timezones.js && node generators/core/languageNamesByCode.js",
     "update-extra": "node generators/extra/currencyCodes.js && node generators/extra/countryCodes.js && node generators/extra/languageCodes.js && node generators/extra/currencyCodesByCountry.js && node generators/extra/timezonesByCountry.js && node generators/extra/countryOfficialLanguages.js && node generators/extra/countriesByCode.js",
     "update-all": "npm run update-core && npm run update-extra && node generators/jstz-update-dst-rules",
-    "release": "bash dev/push.sh"
+    "commit": "node dev/commit.js commit"
   },
   "repository": {
     "type": "git",
@@ -42,5 +42,9 @@
     "minify-stream": "^1.2.1",
     "node-expat": "^2.3.18",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "semver": "^7.3.2",
+    "yargs": "^15.3.1"
   }
 }
