dependency basekits updated and corresponding dependencies moved to devDependencies.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locale-util",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "data/index.js",
   "scripts": {
@@ -33,17 +33,12 @@
     "url": "https://github.com/muratgozel/locale-util/issues"
   },
   "homepage": "https://github.com/muratgozel/locale-util#readme",
-  "dependencies": {
-    "@basekits/core": "^1.0.0",
-    "@basekits/kit-error": "^1.0.3",
-    "@basekits/kit-object": "^1.0.1",
-    "@basekits/kit-type": "^1.0.0",
-    "@basekits/kit-validator": "^1.0.0",
-    "minify-stream": "^1.2.1",
-    "node-expat": "^2.3.18",
-    "node-fetch": "^2.6.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "basekits": "^1.0.2",
+    "minify-stream": "^2.0.0",
+    "node-expat": "^2.3.18",
+    "node-fetch": "^2.6.0",
     "semver": "^7.3.2",
     "yargs": "^15.3.1"
   }
