--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locale-util",
-  "version": "2.0.4",
+  "version": "2.0.5",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "data/index.js",
   "scripts": {
@@ -44,6 +44,7 @@
   "dependencies": {},
   "devDependencies": {
     "basekits": "^1.2.1",
+    "colors": "^1.4.0",
     "minify-stream": "^2.1.0",
     "node-expat": "^2.3.18",
     "node-fetch": "^2.6.1",
