--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locale-util",
-  "version": "3.0.3",
+  "version": "3.0.4",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "build/index.js",
   "type": "module",
@@ -20,7 +20,8 @@
     "precompile": "rm -rf build/*",
     "compile": "tsc -p tsconfig.json",
     "build": "node esbuild.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "docs": "typedoc --includeVersion --excludePrivate src/index.ts types/index.d.ts"
   },
   "repository": {
     "type": "git",
@@ -65,6 +66,7 @@
     "jest": "^29.5.0",
     "moment-timezone": "^0.5.41",
     "node-releaser": "^2.0.0-beta.4",
+    "typedoc": "^0.23.28",
     "typescript": "^4.9.5"
   }
 }
