--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "locale-util",
-  "version": "3.0.8",
+  "version": "3.0.9",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "main": "build/index.js",
   "type": "module",
@@ -56,7 +56,6 @@
   "homepage": "https://github.com/muratgozel/locale-util#readme",
   "devDependencies": {
     "@jest/globals": "^29.5.0",
-    "@tsconfig/node18-strictest-esm": "^1.0.1",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
@@ -67,6 +66,11 @@
     "moment-timezone": "^0.5.41",
     "node-releaser": "^2.0.0-beta.4",
     "typedoc": "^0.23.28",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
+  },
+  "dependencies": {
+    "@tsconfig/esm": "^1.0.2",
+    "@tsconfig/node18": "^1.0.1",
+    "@tsconfig/strictest": "^2.0.0"
   }
 }
