--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "locale-util",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
-  "main": "build/index.js",
   "type": "module",
-  "types": "types",
-  "imports": {
-    "#src/*": "./build/*.js"
-  },
   "exports": {
     ".": {
+      "types": "./types/index.d.ts",
       "import": "./build/index.js",
-      "require": "./dist/cjs/index.js"
+      "require": "./dist/locale-util.js"
     }
   },
+  "types": "./types/index.d.ts",
+  "main": "./dist/locale-util.js",
+  "module": "./build/index.js",
   "scripts": {
     "presetup": "rm -rf src/data/*",
     "setup": "node setup/generateResources.js",
     "precompile": "rm -rf build/*",
     "compile": "tsc -p tsconfig.json",
-    "build": "node esbuild.js",
+    "build": "rollup --config rollup.config.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "docs": "typedoc --includeVersion --excludePrivate src/index.ts types/index.d.ts"
   },
@@ -46,8 +45,8 @@
     "url": "https://gozel.com.tr"
   },
   "funding": {
-    "type": "ko-fi",
-    "url": "https://ko-fi.com/muratgozel"
+    "type": "patreon",
+    "url": "https://patreon.com/muratgozel"
   },
   "license": "MIT",
   "bugs": {
@@ -55,21 +54,32 @@
   },
   "homepage": "https://github.com/muratgozel/locale-util#readme",
   "devDependencies": {
+    "@babel/cli": "^7.22.9",
+    "@babel/core": "^7.22.9",
+    "@babel/plugin-transform-runtime": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
     "@jest/globals": "^29.5.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.2",
+    "@rollup/plugin-json": "^6.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "esbuild": "^0.17.14",
+    "core-js": "^3.31.1",
     "eslint": "^8.35.0",
     "fast-xml-parser": "^4.1.3",
     "jest": "^29.5.0",
     "moment-timezone": "^0.5.41",
     "node-releaser": "^2.0.0-beta.4",
+    "rollup": "^3.26.2",
     "typedoc": "^0.24.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "@tsconfig/esm": "^1.0.2",
+    "@babel/runtime": "^7.22.6",
+    "@babel/runtime-corejs3": "^7.22.6",
     "@tsconfig/node18": "^1.0.1",
     "@tsconfig/strictest": "^2.0.0"
   }
