--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "locale-util",
-  "version": "3.2.2",
+  "version": "4.0.0-beta.0",
   "description": "Locale data generators written in node.js. Uses reliable sources. Generated data available as JS/JSON objects.",
   "type": "module",
   "exports": {
     ".": {
-      "types": "./types/index.d.ts",
-      "import": "./build/index.js",
-      "require": "./dist/locale-util.js"
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     }
   },
   "types": "./types/index.d.ts",
-  "main": "./dist/locale-util.js",
-  "module": "./build/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "presetup": "rm -rf src/data/*",
-    "setup": "node setup/generateResources.js",
+    "setup": "node --loader @swc-node/register/esm ./src/setup/index.ts",
     "precompile": "rm -rf build/*",
     "compile": "tsc -p tsconfig.json",
-    "build": "rollup --config rollup.config.js",
+    "build": "NODE_ENV=production tsup",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest",
     "docs": "typedoc --includeVersion --excludePrivate src/index.ts types/index.d.ts"
+  },
+  "config": {
+    "phonenumber_metadata_endpoint": "https://raw.githubusercontent.com/googlei18n/libphonenumber/master/resources/PhoneNumberMetadata.xml",
+    "cldr_supplement_filepath": "./cldr-data-common/supplemental/supplementalData.xml",
+    "cldr_main_path": "./cldr-data-common/main",
+    "data_path": "./src/data"
+  },
+  "engines": {
+    "node": "20.x",
+    "pnpm": "8.x"
   },
   "repository": {
     "type": "git",
@@ -54,33 +62,38 @@
   },
   "homepage": "https://github.com/muratgozel/locale-util#readme",
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/plugin-transform-runtime": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
-    "@jest/globals": "^29.5.0",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.2",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "core-js": "^3.31.1",
-    "eslint": "^8.35.0",
-    "fast-xml-parser": "^4.1.3",
-    "jest": "^29.5.0",
-    "moment-timezone": "^0.5.41",
-    "node-releaser": "^2.0.0-beta.4",
-    "rollup": "^4.9.2",
-    "typedoc": "^0.25.6",
-    "typescript": "^5.3.3"
+    "@babel/cli": "^7.23.9",
+    "@babel/core": "^7.24.0",
+    "@babel/plugin-transform-runtime": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "@jest/globals": "^29.7.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@swc-node/register": "^1.9.0",
+    "@swc/cli": "^0.3.10",
+    "@swc/core": "^1.4.5",
+    "@tsconfig/node20": "^20.1.2",
+    "@tsconfig/strictest": "^2.0.3",
+    "@types/node": "^20.11.25",
+    "core-js": "^3.36.0",
+    "eslint": "^8.57.0",
+    "fast-xml-parser": "^4.3.5",
+    "jest": "^29.7.0",
+    "moment-timezone": "^0.5.45",
+    "node-releaser": "^2.1.4",
+    "pino": "^8.19.0",
+    "pino-pretty": "^10.3.1",
+    "rollup": "^4.12.1",
+    "tsup": "^8.0.2",
+    "typedoc": "^0.25.11",
+    "typescript": "^5.4.2",
+    "typescript-eslint": "^7.1.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.22.6",
-    "@babel/runtime-corejs3": "^7.22.6",
-    "@tsconfig/node18": "^18.2.2",
-    "@tsconfig/strictest": "^2.0.0"
+    "@babel/runtime": "^7.24.0",
+    "@babel/runtime-corejs3": "^7.24.0"
   }
 }
